Minor SQ and Java 11 cleanup
Change-Id: I7dbff15fb9ada8f85b6ad3d297c901785865e2a1